<resources>
    <string name="app_name">Fidelis</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Seja um Fidelis</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="pref_key">key</string>
    <string name="pref_name">name</string>
    <string name="pref_email">email</string>
    <string name="lblUser">Login</string>
    <string name="lblPassword">Senha</string>

    <string name="lblName">Nome</string>
    <string name="lblEmail">Email</string>
    <string name="lblCpf">CPF</string>
    <string name="lblCPassword">Conf. Senha</string>

    <string name="desc_login">Continuar</string>
    <string name="desc_register">Não Possuo Cadastro</string>
    <string name="desc_registersend">Enviar Cadastro</string>
    <string name="title_activity_shop">ShopActivity</string>

</resources>
