<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.hackarejo.equipe9.LoginActivity">

    <RelativeLayout
        android:id="@+id/LayoutTop"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/textBlack"
            android:hint="@string/lblUser"
            android:textColorHint="@color/textBlack"
            android:background="@drawable/border"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textBlack"
            android:layout_alignParentLeft="true"

            android:layout_below="@+id/txtUser"
            android:inputType="textPassword"
            android:hint="@string/lblPassword"
            android:background="@drawable/border"
            android:textColorHint="@color/textBlack"
            android:layout_marginBottom="5dp"
            />

        <RelativeLayout
            android:id="@+id/LayoutFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/txtPassword"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/buttonRegister"
                android:background="@color/button"
                android:textColor="@color/textWhite"
                android:layout_alignParentRight="true"
                android:text="@string/desc_login" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textWhite"
                android:layout_below="@+id/buttonLogin"
                android:background="@color/button"
                android:text="@string/desc_register" />


        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>
