<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.hackarejo.equipe9.RegisterActivity"
    android:background="@drawable/login_bg"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/lblName"
            android:layout_marginTop="5dp"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lblName"
            android:inputType="text"
            />

            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lblEmail"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblEmail"
                android:inputType="textEmailAddress"
                />

            <TextView
                android:id="@+id/lblCpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lblCpf"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCpf"
                android:inputType="number"
                />

            <TextView
                android:id="@+id/lblPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="Senha"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtRPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblPassword"
                android:inputType="textPassword"
                />

            <TextView
                android:id="@+id/lblCPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lblCPassword"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtCPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblCPassword"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/buttonSendRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_register"
                android:layout_below="@+id/txtCPassword"
                android:layout_alignParentLeft="@+id/txtCPassword" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
